[tool.poetry]
name = "habit-tracker"
version = "0.1.0"
description = "A (very) simple habit tracking app."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
tracker = "habit_tracker.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
