[tool.poetry]
name = "habit-tracker"
version = "0.1.0"
description = "A (very) simple habit tracking app."
authors = ["Radu Chindris <radu.chinris@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.2.1"
rich = "^14.0.0"
sqlalchemy = "^2.0.41"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
habit = "habit_tracker.cli:cli"
